<resources>
    <string name="app_name">Animals</string>
    <string name="breed_hint">Breed</string>
    <string name="age_hint">Age</string>
    <string name="name_hint">Name</string>
    <string name="add_new_animal_toolbar">Add New Animal</string>
    <string name="add_button">Add</string>
    <string name="sort_by_toolbar">Sort by</string>
    <string name="settings_toolbar">Settings</string>
    <string name="settings_tittle">Settings</string>
</resources>