<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Toolbar
        android:id="@+id/new_animal_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        tools:ignore="MissingConstraints"
        android:background="@color/purple_200"
        android:title="@string/add_new_animal_toolbar"/>


    <EditText
        android:id="@+id/animal_name_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/name_hint"
        android:layout_margin="48dp"
        android:maxLength="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_animal_toolbar" />

    <EditText
        android:id="@+id/animal_age_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/age_hint"
        android:inputType="number|numberDecimal"
        android:layout_margin="48dp"
        android:maxLength="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_name_hint" />

    <EditText
        android:id="@+id/animal_breed_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:hint="@string/breed_hint"
        android:layout_margin="48dp"
        android:maxLength="25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_age_hint" />

    <Button
        android:id="@+id/button_add_animal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"
        android:textColor="@color/black"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/animal_breed_hint" />

</androidx.constraintlayout.widget.ConstraintLayout>