<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/animalsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/addNameEditText"
        android:padding="@dimen/content_margin"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:listitem="@layout/animal_list_item"/>

    <EditText
        android:id="@+id/addNameEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/add_animal_height"
        android:imeOptions="actionDone"
        android:background="@null"
        android:hint="@string/name_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:padding="@dimen/content_margin"
        app:layout_constraintBottom_toTopOf="@id/addAgeEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addAgeEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/add_animal_height"
        android:imeOptions="actionDone"
        android:background="@null"
        android:hint="@string/age_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:padding="@dimen/content_margin"
        app:layout_constraintBottom_toTopOf="@+id/addBreedEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addBreedEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/add_animal_height"
        android:imeOptions="actionDone"
        android:background="@null"
        android:hint="@string/breed_hint"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:padding="@dimen/content_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/addButton"
        android:layout_width="@dimen/add_animal_button_size"
        android:layout_height="@dimen/add_animal_button_size"
        android:src="@drawable/ic_baseline_add_24"
        android:scaleType="center"
        android:tint="?colorPrimaryVariant"
        app:layout_constraintStart_toEndOf="@+id/addBreedEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addBreedEditText"
        app:layout_constraintBottom_toBottomOf="@+id/addBreedEditText"
        />

</androidx.constraintlayout.widget.ConstraintLayout>